<resources>
    <string name="app_name">Dime el Tiempo</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

    <string name="clickme">Click me</string>
    <string name="error_connection_rejected">connection refused</string>
    <string name="error_no_connection">offline</string>
    <string name="error_no_data">Error no data</string>
    <string name="error_not_found">Error not found</string>
    <string name="error_reading_error">Error reading</string>
    <string name="error_unahthorized">Error unahthorized</string>
    <string name="error_unknown_error">Error desconocido</string>
    <string name="Cargando">Loading...</string>
    <string name="grados">degreess</string>
    <string name="recordatorio">Add alarm</string>
    <string name="dias">Days</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="hora">Time</string>
    <string name="lunes">Monday</string>
    <string name="martes">Tuesday</string>
    <string name="miercoles">Wednesday</string>
    <string name="jueves">Thursday</string>
    <string name="viernes">Friday</string>
    <string name="sabado">Saturday</string>
    <string name="domingo">Sunday</string>
    <string name="titulodias">Days</string>
    <string name="notifica">Tell Me the Weather</string>
    <string name="dateinvalid">Invalid Date/Time</string>
    <string name="notificacreada">Alarm created</string>
    <string name="spania">Spania</string>
    <string name="favoritos">Favorites</string>
    <string name="otros">Others</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addfav">Added to Favorites</string>
    <string name="estasseguro">Are you sure?</string>
    <string name="provincias">Provincias</string>
    <string name="alarmainvalida">"    Alarm Error"</string>
    <string name="borrar">Delete</string>
    <string name="delalarma">Del Alarm</string>
    <string name="manana">" . And tomorrow, "</string>
    <string name="textalarma">Do you want to delete the alarm?</string>
    <string name="municipios">Municipios</string>
    <string name="escuchame">Listen to me!</string>
</resources>
